--- a/www/globalStyle.css
+++ b/www/globalStyle.css
@@ -161,6 +161,11 @@ section {
     padding: 3rem 0;
 }
 
+ul {
+    list-style: disc;
+    margin-left: 2rem;
+}
+
 .flexContainer {
     max-width: 90%;
     margin: auto;
@@ -171,6 +176,11 @@ section {
 
 .flexColumn {
     padding: 1rem 0;
+}
+
+.vertical {
+    display: flex;
+    flex-direction: column;
 }
 
 /*////////////////////////////////////////////////////////////////////////////////////////////
@@ -258,6 +268,34 @@ header .flexContainer {
   }
 
 /*////////////////////////////////////////////////////////////////////////////////////////////
+                        OKTO FOOTER STYLES
+////////////////////////////////////////////////////////////////////////////////////////////*/
+
+footer {
+    background-color: grey;
+    color: white;
+}
+
+footer .flexContainer {
+    justify-content: space-between;
+}
+
+footer h5 {
+    margin-bottom: 1rem;
+}
+
+footer a {
+    padding: 0.5rem 0;
+}
+
+footer .logo {
+    width: 100%;
+    max-width: 200px;
+    margin: auto 0;
+    margin: 1rem 0;
+}
+
+/*////////////////////////////////////////////////////////////////////////////////////////////
                         MEDIA QUERIES
 ////////////////////////////////////////////////////////////////////////////////////////////*/
 
@@ -287,7 +325,6 @@ header .flexContainer {
         left: 0;
         display: flex;
         flex-direction: column;
-        background-color: grey;
         padding: 2rem 0;
     }
   }
